# lspp

./: .gitignore  CMakeLists.txt  README.md  compile_test.sh  icon_output.txt  icon_test.sh  output.txt  test_combined_flags.cpp  test_icons  test_icons.cpp  test_music_icon.cpp
src/: ArgumentParser.cpp  ArgumentParser.hpp  DisplayFormatter.cpp  DisplayFormatter.hpp  FileOperations.cpp  FileOperations.hpp  IconProvider.cpp  IconProvider.hpp  lspp.cpp  lspp.hpp  main.cpp  resources.hpp
